gccida/c3/ix86_preferred_reload_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_preferred_reload_class/src/i386.c:12741:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class  ix86_preferred_reload_class( rtx x, reg_class a2) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_preferred_reload_class/src/i386.c:12741:48: error: must use 'enum' tag to refer to type 'reg_class'
reg_class  ix86_preferred_reload_class( rtx x, reg_class a2) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_preferred_reload_class/src/i386.c:12743:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v2; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_preferred_reload_class/src/i386.c:12758:57: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( v3 = ( unsigned __int8)BYTE2( *( _DWORD *)x), v4 = mode_class_0[v3], v4 > 8) 
                                                        ^~~~~~~~~~~~
                                                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_preferred_reload_class/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_preferred_reload_class/src/obj/i386.o] Error 1
